@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-10-26 r77334) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-11-06 r77380) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1298,4 +1298,11 @@ value <- new("A")
 > ## was ... <-  new(structure("A", package = ".GlobalEnv"))
 > ## for a few days in R-devel (Nov.2017)
 > 
+> 
+> ## canCoerce(obj, .)  when length(class(obj)) > 1 :
+> setOldClass("foo")
+> setAs("foo", "A", function(from) new("A", foo=from))
+> o3 <- structure(1:7, class = c("foo", "bar"))
+> stopifnot( canCoerce(o3, "A") )
+> ## failed in R <= 3.6.1
 > 
